# ml_pipeline

./: .gitignore  README.md  ml_pipeline_notebook_use.ipynb  mlflow.db  pyproject.toml  temp.ipynb
.claude/: settings.json  settings.local.json
configs/: example_run.json  example_run_SVM.json  iris_rf_v1.json
ml_pipeline/ml_pipeline/: config_loader.py  ingest.py  pipeline.py  preprocess.py  save.py  train.py
src/ml_pipeline/: __init__.py  config_loader.py  evaluate.py  ingest.py  pipeline.py  preprocess.py  save.py  train.py
tests/: test_evaluate.py  test_ingest.py  test_preprocess.py  test_train.py
