[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ml_pipeline"
version = "0.1.0"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.1",
    "xgboost>=3.2.0",
    "mlflow>=3.11.1",
    "joblib>=1.5.3",
]

[tool.setuptools.packages.find]
where = ["src"]
